--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<img border="0" src="me-bw.jpg"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">PhD Student</span></p>
-		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"></span>315 ICS/CS building, Center for Multimedia and Networking</p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">315 ICS/CS building, Center for Multimedia and Networking</span></p>
         <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2111 Lower Mall, Voncouver, BC, V6T 1Z4 Canada</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (1)778-323-1225</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com"> jianzhelin@ece.ubc.ca; jianzhelin@gmail.com</span></p>
@@ -78,9 +78,13 @@
 		<td class="STYLE11" width="180">•	2016-10-10</td>
 		<td class="STYLE12">I am invited as the reviewer for <a href="http://www.journals.elsevier.com/pattern-recognition"><em>Pattern Recognition(PR)</em></a></td>
 	</tr>
+		<tr>
+		<td class="STYLE11" width="180">•	2016-09-10</td>
+		<td class="STYLE12">I I start to work as the TA for CPEN211.</td>
+	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	2016-08-26</td>
-		<td class="STYLE12">I begin to work as a PhD student in Electrical and Computer Engineering Department, University of British Columbia. My supervisor is Professor <a href="http://www.ece.ubc.ca/~zjanew/">Z. Jane Wang. I continue to do my research on Computer vision and Pattern Recoginition.</a></td>
+		<td class="STYLE12">I begin to work as a PhD student in Electrical and Computer Engineering Department, University of British Columbia. My supervisor is Professor <a href="http://www.ece.ubc.ca/~zjanew/">Z. Jane Wang</a>. I continue to do my research on Computer vision and Pattern Recoginition.</td>
 	</tr>
 
 	<tr>
@@ -119,7 +123,7 @@
  <h2 id="Education" style="text-align:left; padding-top:20px;"><span class="STYLE10">Education</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
-		<td class="STYLE11" width="180">•	09/2016-07/2020(expected)</td>
+		<td class="STYLE11" width="200">•	09/2016-07/2020(expected)</td>
 		<td class="STYLE12">Ph.D, Computer Engineering, <a href="http://english.ucas.ac.cn/Pages/default.aspx">Center for Multimedia and Networking, University of British Columbia</a>;<br> Supervisor: Prof. <a href="http://www.ece.ubc.ca/~zjanew/">Z. Jane Wang</a></td>
 	</tr>
 	<tr>
@@ -217,7 +221,6 @@
 	<p class="STYLE14">•	IEEE Student Member</p>
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
-    <p class="STYLE14">•	C</p>
     <p class="STYLE14">•	Computer Vision and Image Understanding(CVIU)</p>
     <p class="STYLE14">•	Pattern Recoginition(PR)</p>
     <p class="STYLE14">•	the European Signal Processing Conference 2016 (Eusipco 2016)</p>
@@ -235,7 +238,7 @@
     <p class="STYLE15">•	Program: Proficient in <i>Matlab, AI, LaTex</i>, grasp <i>C/C++, PS, OpenGL, github, HTML5</i></p>
     <p class="STYLE15">•	<i>Monitor of grade 2013</i></p>   
     <p class="STYLE15">•	<i>Teaching Assistant for CPEN 211, 09/01/2016-12/30/2016</i></p>   
-    <p class="STYLE15">•	<i>Research Assistant for CPEN 211, 09/01/2016-07/01/2020</i></p>  	
+    <p class="STYLE15">•	<i>Research Assistant, 09/01/2016-07/01/2020</i></p>  	
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
 			</div>
