--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
  <h2 id="Education" style="text-align:left; padding-top:20px;"><span class="STYLE10">Education</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
-		<td class="STYLE11" width="200">•	09/2016-07/2020(expected)</td>
+		<td class="STYLE11" width="200">•	09/2016-07/2020</td>
 		<td class="STYLE12">Ph.D, Computer Engineering, <a href="http://english.ucas.ac.cn/Pages/default.aspx">Center for Multimedia and Networking, University of British Columbia</a>;<br> Supervisor: Prof. <a href="http://www.ece.ubc.ca/~zjanew/">Z. Jane Wang</a></td>
 	</tr>
 	<tr>
