--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 		<td width="200">
 		<p align="center">
 		<font face="Arial">
-		<img border="0" src="me-bw.jpg"></font></td>
+		<img border="0" src="me.jpg"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">PhD Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">315 ICS/CS building, Center for Multimedia and Networking</span></p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia</span></p>
         <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2111 Lower Mall, Voncouver, BC, V6T 1Z4 Canada</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (1)778-323-1225</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com"> jianzhelin@ece.ubc.ca; jianzhelin@gmail.com</span></p>
