--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<td width="200">
 		<p align="center">
 		<font face="Arial">
-		<img border="0" src="me.jpg"></font></td>
+		<img border="0" src="me.jpg" width="128" height="96"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">PhD Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">315 ICS/CS building, Center for Multimedia and Networking</span></p>
