--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<img border="0" src="me.jpg" width="192" height="256"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">PhD Student</span></p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">315 ICS/CS building, Center for Multimedia and Networking</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia</span></p>
         <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2111 Lower Mall, Voncouver, BC, V6T 1Z4 Canada</span></p>
