--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<font face="Arial">
 		<img border="0" src="me.jpg" width="192" height="256"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
-		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">PhD Student</span></p>
+		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Ph.D Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">315 ICS/CS building, Center for Multimedia and Networking</span></p>
         <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2111 Lower Mall, Voncouver, BC, V6T 1Z4 Canada</span></p>
@@ -75,6 +75,15 @@
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
  <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
+<tr>
+		<td class="STYLE11" width="180">•	2016-12-16</td>
+		<td class="STYLE12">I am invited as the PC-member for <a href="https://ijcai2017.confmaster.net/user/accounts/login/"><em>the International Joint Conference on Artificial Intelligence(IJCAI)</em></a></td>
+	</tr>
+<tr>
+<tr>
+		<td class="STYLE11" width="180">•	2016-12-16</td>
+		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6979"><em>IEEE Transactions on Intelligent Transportation Systems(ITIS)</em></a></td>
+	</tr>
 <tr>
 		<td class="STYLE11" width="180">•	2016-10-10</td>
 		<td class="STYLE12">I am invited as the reviewer for <a href="http://www.journals.elsevier.com/pattern-recognition"><em>Pattern Recognition(PR)</em></a></td>
@@ -218,10 +227,14 @@
 	</table>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
-<p class="STYLE11"><b>Membership</b></p>
+<p class="STYLE11"><b>Membership:</b></p>
 	<p class="STYLE14">•	IEEE Student Member</p>
+	
+<p class="STYLE11"><b>Program Committee Member:</b></p>
+	<p class="STYLE14">•	the International Joint Conference on Artificial Intelligence(IJCAI)</p>
 
 <p class="STYLE11"><b>Regular Reviewer：</b></p>
+    <p class="STYLE14">•	IEEE Transactions on Intelligent Transportation Systems(ITIS)</p>
     <p class="STYLE14">•	Computer Vision and Image Understanding(CVIU)</p>
     <p class="STYLE14">•	Pattern Recoginition(PR)</p>
     <p class="STYLE14">•	the European Signal Processing Conference 2016 (Eusipco 2016)</p>
