--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<p align="center">
 		<font face="Arial">
 		<img border="0" src="me.jpg" width="192" height="256"></font></td>
-		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
-		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Ph.D Student</span></p>
-		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia</span></p>
-		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">315 ICS/CS building, Center for Multimedia and Networking</span></p>
-        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2111 Lower Mall, Voncouver, BC, V6T 1Z4 Canada</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (1)778-323-1225</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com"> jianzhelin@ece.ubc.ca; jianzhelin@gmail.com</span></p>
+		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲, Ph. D</span></b>
+		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Post-Doctoral Associate</span></p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia & New York University</span></p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for Multimedia and Networking(UBC) & VIDA lab(NYU) </span></p>
+        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2388 Madison Avenue, Burnaby, BC, V5K 0C8, Canada</span></p>
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (1)236-513-0316</span></p>
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com"> jianzhelin@ece.ubc.ca; jianzhelin@nyu.edu</span></p>
 		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
         <span id="idJsShow"></span>
 		</p>       
@@ -76,73 +76,25 @@
  <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
 <tr>
-		<td class="STYLE11" width="180">•	2016-12-16</td>
-		<td class="STYLE12">I am invited as the PC-member for <a href="https://ijcai2017.confmaster.net/user/accounts/login/"><em>the International Joint Conference on Artificial Intelligence(IJCAI)</em></a></td>
+		<td class="STYLE11" width="180">•	2020-09-15</td>
+		<td class="STYLE12">I join VIDA lab <a href="https://vida.engineering.nyu.edu/"> as a Post Doctoral Associate.</a></td>
 	</tr>
 <tr>
 <tr>
-		<td class="STYLE11" width="180">•	2016-12-16</td>
-		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6979"><em>IEEE Transactions on Intelligent Transportation Systems(ITIS)</em></a></td>
+		<td class="STYLE11" width="180">•	2020-09-01</td>
+		<td class="STYLE12">I work as a Post Doctoral Faculty in Electrical and Computer Engineering department. I work closely with Prof. Rabab Ward <a href="https://ipl.ece.ubc.ca/"></a></td>
 	</tr>
 <tr>
-		<td class="STYLE11" width="180">•	2016-10-10</td>
-		<td class="STYLE12">I am invited as the reviewer for <a href="http://www.journals.elsevier.com/pattern-recognition"><em>Pattern Recognition(PR)</em></a></td>
+		<td class="STYLE11" width="180">•	2020-05-01~08-31</td>
+		<td class="STYLE12">I work as a postgraduate research assistant in Robotics and Control lab, under supervision of Prof. Purang Abolmaesumi <a href="https://www.ece.ubc.ca/faculty/purang-abolmaesumi"></a></td>
 	</tr>
 		<tr>
-		<td class="STYLE11" width="180">•	2016-09-10</td>
-		<td class="STYLE12">I I start to work as the TA for CPEN211.</td>
+		<td class="STYLE11" width="180">•	2020-05-04</td>
+		<td class="STYLE12">I get my Ph.D. degree from Electrical and Computer Engineering Department, University of British Columbia! Thanks to my supervisor Z. Jane Wang <a href="https://www.ece.ubc.ca/faculty/jane-z-wang"></a>.</td>
 	</tr>
 	<tr>
-		<td class="STYLE11" width="180">•	2016-08-26</td>
-		<td class="STYLE12">I begin to work as a PhD student in Electrical and Computer Engineering Department, University of British Columbia. My supervisor is Professor <a href="http://www.ece.ubc.ca/~zjanew/">Z. Jane Wang</a>. I continue to do my research on Computer vision and Pattern Recoginition.</td>
-	</tr>
-
-	<tr>
-		<td class="STYLE11" width="180">•	2016-06-22</td>
-		<td class="STYLE12">I am invited as the reviewer for <a href="https://www.journals.elsevier.com/computer-vision-and-image-understanding/"><em>Computer Vision and Image Understanding(CVIU)</em></a></td>
-	</tr>
-	<tr>
-		<td class="STYLE11" width="180">•	2016-05-16</td>
-		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=8859"><em>IEEE Geoscience and Remote Sensing Letters</em></a></td>
-	</tr>
-
-	<tr>
-		<td class="STYLE11" width="180">•	2016-02-23</td>
-		<td class="STYLE12">I am invited as the reviewer for <a href="http://www.icisp-conf.org/"><em>the International Conference on Image and Signal Processing 2016 (ICISP 2016)</em></a></td>
-	</tr>
-		<tr>
-		<td class="STYLE11" width="180">•	2016-02-17</td>
-		<td class="STYLE12">I am invited as the reviewer for <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036"><em>IEEE Transaction on Cybernetics (IEEE)</em></a></td>
-	</tr>
-	<tr>
-		<td class="STYLE11" width="180">•	2015-09-28</td>
-		<td class="STYLE12">One paper “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization” is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036"><em>IEEE Transaction on Cybernetics (IEEE)</em></a></td>
-	</tr>
-	<tr>
-		<td class="STYLE11" width="180">•	2015-09-17</td>
-		<td class="STYLE12"> One paper "Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=36"><em>IEEE Transaction on Geoscience and Remote Sensing (IEEE)</em></a></td>
-	</tr>
-	<tr>
-		<td class="STYLE11" width="180">•	2015-09-03</td>
-		<td class="STYLE12">One paper "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385"><em>IEEE Transaction on Neural Networks and Learning Systems (IEEE)</em></a></td>
-	</tr>
-</table>
-
- 
-
- <h2 id="Education" style="text-align:left; padding-top:20px;"><span class="STYLE10">Education</span></h2>
-<table border="0" width="900" id="table2" >
-	<tr>
-		<td class="STYLE11" width="200">•	09/2016-07/2020</td>
-		<td class="STYLE12">Ph.D, Computer Engineering, <a href="http://english.ucas.ac.cn/Pages/default.aspx">Center for Multimedia and Networking, University of British Columbia</a>;<br> Supervisor: Prof. <a href="http://www.ece.ubc.ca/~zjanew/">Z. Jane Wang</a></td>
-	</tr>
-	<tr>
-		<td class="STYLE11" width="180">•	09/2013-07/2016</td>
-		<td class="STYLE12">M.S., Computer Science, <a href="http://english.ucas.ac.cn/Pages/default.aspx">Center for OPTical IMagery Analysis and Learning (OPTIMAL), University of Chinese Academy of Sciences</a>;<br> Supervisor: Prof. <a href="http://www.optyjsb.com/about/show.asp?id=805">Yuan Yuan</a>, <a href="http://optimal.opt.ac.cn/"> Xuelong Li</a> and<a href="http://crabwq.github.io/"> Qi Wang</a></td>
-	</tr>
-	<tr>
-		<td class="STYLE11" width="180">•	09/2009-07/2013</td>
-		<td class="STYLE12">B.S., Optoelectronic Information Engineering, <a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a>;<br> B.A., English (minor), Huazhong University of Science and Technology</td>
+		<td class="STYLE11" width="180">•	2019-06-17~2020-02-01</td>
+		<td class="STYLE12">I finished my internship in Siemens healthineer company. I worked closely with Dr. Rui Liao <a href="https://scholar.google.com/citations?user=gvXcgBQAAAAJ&hl=en"></a>.</td>
 	</tr>
 </table>   
         
@@ -150,11 +102,11 @@
 
 
 <h2 id="ResearchInterests" style="text-align:left; padding-top:20px;"><span class="STYLE10">Research Interests</span></h2>
-	<p class="STYLE11">Computer vision, pattern recognition, machine learning methods and their applications particularly in:</p>
+	<p class="STYLE11">Computer vision, pattern recognition, machine learning methods on different types of images/video, including:</p>
 	<table border="0" width="900" id="table2" >
 	<tr>
 		<td class="STYLE16" width="5">•</td>
-		<td class="STYLE17">Hyperspectral/multispectral image analysis, including classification, segmentation, band selection, abnormal detection, etc.</td>
+		<td class="STYLE17">remote sensing images, medical images, RGB/RGB-D images etc.</td>
 	</tr>
 </table>
 
