--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<p align="center">
 		<font face="Arial">
 		<img border="0" src="me.jpg" width="192" height="256"></font></td>
-		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲, Ph. D</span></b>
+		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin, Ph.D</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Post-Doctoral Associate</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia & New York University</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for Multimedia and Networking(UBC) & VIDA lab(NYU) </span></p>
@@ -93,7 +93,7 @@
 		<td class="STYLE12">I get my Ph.D. degree from Electrical and Computer Engineering Department, University of British Columbia! Thanks to my supervisor Z. Jane Wang <a href="https://www.ece.ubc.ca/faculty/jane-z-wang"></a>.</td>
 	</tr>
 	<tr>
-		<td class="STYLE11" width="180">•	2019-06-17~2020-02-01</td>
+		<td class="STYLE11" width="200">•	2019-06-17~2020-02-01</td>
 		<td class="STYLE12">I finished my internship in Siemens healthineer company. I worked closely with Dr. Rui Liao <a href="https://scholar.google.com/citations?user=gvXcgBQAAAAJ&hl=en"></a>.</td>
 	</tr>
 </table>   
