--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		<img border="0" src="me.jpg" width="192" height="256"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin, Ph.D</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Post-Doctoral Associate</span></p>
-		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia & New York University</span></p>
-		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for Multimedia and Networking(UBC) & VIDA lab(NYU) </span></p>
-        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2388 Madison Avenue, Burnaby, BC, V5K 0C8, Canada</span></p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia </span></p>
+		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for Multimedia and Networking(UBC) </span></p>
+        <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">2388 Madison Avenue, Burnaby, BC, V5C 0K8, Canada</span></p>
         <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Tel: (1)236-513-0316</span></p>
-        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com"> jianzhelin@ece.ubc.ca; jianzhelin@nyu.edu</span></p>
+        <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mailto:jianzhelin@gmail.com"> jianzhelin@ece.ubc.ca</span></p>
 		 <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9"><a href="mycv.pdf">CV</a></p>
         <span id="idJsShow"></span>
 		</p>       
@@ -75,11 +75,6 @@
 		<div id="wsite-content" class="wsite-elements wsite-not-footer">
  <h2 id="News" style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
-<tr>
-		<td class="STYLE11" width="180">•	2020-09-15</td>
-		<td class="STYLE12">I join VIDA lab <a href="https://vida.engineering.nyu.edu/"> as a Post Doctoral Associate.</a></td>
-	</tr>
-<tr>
 <tr>
 		<td class="STYLE11" width="180">•	2020-09-01</td>
 		<td class="STYLE12">I work as a Post Doctoral Faculty in Electrical and Computer Engineering department. I work closely with Prof. Rabab Ward <a href="https://ipl.ece.ubc.ca/"></a></td>
