--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>JianzheLin's Homepage-UCAS</title>
+<title>JianzheLin's Homepage</title>
 
 <link rel="stylesheet" href="site.css">
 <meta name="description" content="Jianzhe Lin&#39;s webpage">
