--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<p align="center">
 		<font face="Arial">
 		<img border="0" src="me.jpg" width="192" height="256"></font></td>
-		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin, Ph.D</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
+		<td ><b> <span class="STYLE7">Jianzhe(Peter) Lin, Ph.D</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Post-Doctoral Associate</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">University of British Columbia </span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for Multimedia and Networking(UBC) </span></p>
